--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "jspm": {
     "directories": {},
+    "dependencies": {
+      "angular2": "npm:angular2@^2.0.0-alpha.28"
+    },
     "devDependencies": {
       "typescript": "github:mhegazy/typescript@v1.5-beta2"
     }
