--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "jspm": {
     "directories": {},
     "dependencies": {
-      "angular2": "npm:angular2@^2.0.0-alpha.28"
+      "angular2": "npm:angular2@^2.0.0-alpha.28",
+      "reflect-metadata": "npm:reflect-metadata@^0.1.0"
     },
     "devDependencies": {
       "typescript": "github:mhegazy/typescript@v1.5-beta2"
