fetch data using angular http

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "directories": {},
     "dependencies": {
       "angular2": "npm:angular2@^2.0.0-alpha.28",
+      "express": "npm:express@^4.13.0",
       "reflect-metadata": "npm:reflect-metadata@^0.1.0"
     },
     "devDependencies": {
