--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "jspm": {
+    "configFile": "jspm.conf.js",
     "directories": {},
     "dependencies": {
       "angular2": "npm:angular2@^2.0.0-alpha.28",
@@ -12,7 +13,11 @@
     }
   },
   "devDependencies": {
+    "es6-shim": "^0.32.2",
     "express": "^4.13.0",
-    "peerflix": "^0.30.0"
+    "gulp": "^3.9.0",
+    "gulp-typescript": "^2.7.7",
+    "peerflix": "^0.30.0",
+    "systemjs-builder": "^0.12.1"
   }
 }
