--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "jspm": {
-    "configFile": "jspm.conf.js",
     "directories": {},
+    "configFile": "jspm.conf.js",
     "dependencies": {
       "angular2": "npm:angular2@^2.0.0-alpha.28",
+      "automattic/socket.io-client": "github:automattic/socket.io-client@^1.3.5",
       "express": "npm:express@^4.13.0",
       "reflect-metadata": "npm:reflect-metadata@^0.1.0",
       "zone.js": "npm:zone.js@^0.5.1"
@@ -13,11 +14,13 @@
     }
   },
   "devDependencies": {
+    "browser-sync": "^2.7.13",
     "es6-shim": "^0.32.2",
     "express": "^4.13.0",
     "gulp": "^3.9.0",
     "gulp-typescript": "^2.7.7",
     "peerflix": "^0.30.0",
+    "socket.io": "^1.3.5",
     "systemjs-builder": "^0.12.1"
   }
 }
