add search component

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -17,6 +17,7 @@
     "files": [
         "./app.ts",
         "./components/MovieList/MovieList.ts",
+        "./components/Search/Search.ts",
         "./utils/API.ts"
     ]
 }
