--- a/package.json
+++ b/package.json
@@ -3,22 +3,20 @@
     "directories": {},
     "configFile": "jspm.conf.js",
     "dependencies": {
-      "angular2": "npm:angular2@^2.0.0-alpha.29",
       "automattic/socket.io-client": "github:automattic/socket.io-client@^1.3.5",
+      "babel": "npm:babel-core@^5.6.15",
       "express": "npm:express@^4.13.0",
-      "reflect-metadata": "npm:reflect-metadata@^0.1.0",
-      "zone.js": "npm:zone.js@^0.5.1"
+      "react": "npm:react@^0.13.3"
     },
     "devDependencies": {
-      "typescript": "github:mhegazy/typescript@v1.5-beta2"
+      "babel-runtime": "npm:babel-runtime@^5.6.4",
+      "core-js": "npm:core-js@^0.9.17"
     }
   },
   "devDependencies": {
     "browser-sync": "^2.7.13",
     "es6-shim": "^0.32.2",
     "express": "^4.13.0",
-    "gulp": "^3.9.0",
-    "gulp-typescript": "^2.7.7",
     "peerflix": "^0.30.0",
     "socket.io": "^1.3.5",
     "systemjs-builder": "^0.12.1"
