--- a/package.json
+++ b/package.json
@@ -5,8 +5,16 @@
     "dependencies": {
       "automattic/socket.io-client": "github:automattic/socket.io-client@^1.3.5",
       "babel": "npm:babel-core@^5.6.15",
+      "bluebird": "npm:bluebird@^2.9.32",
       "express": "npm:express@^4.13.0",
-      "react": "npm:react@^0.13.3"
+      "immutable": "npm:immutable@^3.7.4",
+      "keymirror": "npm:keymirror@^0.1.1",
+      "lodash": "npm:lodash@^3.10.0",
+      "qs": "npm:qs@^4.0.0",
+      "react": "npm:react@^0.13.3",
+      "redux": "npm:redux@^0.12.0",
+      "superagent": "npm:superagent@^1.2.0",
+      "url": "github:jspm/nodelibs-url@^0.1.0"
     },
     "devDependencies": {
       "babel-runtime": "npm:babel-runtime@^5.6.4",
