--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "lodash": "npm:lodash@^3.10.0",
       "qs": "npm:qs@^4.0.0",
       "react": "npm:react@^0.13.3",
+      "react-router": "npm:react-router@1.0.0-beta2",
       "redux": "npm:redux@^0.12.0",
       "superagent": "npm:superagent@^1.2.0",
       "url": "github:jspm/nodelibs-url@^0.1.0"
