--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.13.0",
     "peerflix": "^0.30.0",
     "socket.io": "^1.3.5",
+    "superagent": "^1.2.0",
     "systemjs-builder": "^0.12.1"
   }
 }
