--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
       "lodash": "npm:lodash@^3.10.0",
       "qs": "npm:qs@^4.0.0",
       "react": "npm:react@^0.13.3",
+      "react-redux": "npm:react-redux@^1.0.0-alpha",
       "react-router": "npm:react-router@1.0.0-beta2",
-      "redux": "npm:redux@^0.12.0",
+      "redux": "npm:redux@1.0.0-rc",
       "superagent": "npm:superagent@^1.2.0",
       "url": "github:jspm/nodelibs-url@^0.1.0"
     },
@@ -30,5 +31,8 @@
     "socket.io": "^1.3.5",
     "superagent": "^1.2.0",
     "systemjs-builder": "^0.12.1"
+  },
+  "dependencies": {
+    "react": "^0.13.3"
   }
 }
