--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "lodash": "npm:lodash@^3.10.0",
       "qs": "npm:qs@^4.0.0",
       "react": "npm:react@^0.13.3",
+      "react-bootstrap": "npm:react-bootstrap@^0.23.7",
       "react-redux": "npm:react-redux@^1.0.0-alpha",
       "react-router": "npm:react-router@1.0.0-beta2",
       "redux": "npm:redux@1.0.0-rc",
