--- a/package.json
+++ b/package.json
@@ -1,39 +1,30 @@
 {
-  "jspm": {
-    "directories": {},
-    "configFile": "jspm.conf.js",
-    "dependencies": {
-      "automattic/socket.io-client": "github:automattic/socket.io-client@^1.3.5",
-      "babel": "npm:babel-core@^5.6.15",
-      "bluebird": "npm:bluebird@^2.9.32",
-      "express": "npm:express@^4.13.0",
-      "immutable": "npm:immutable@^3.7.4",
-      "keymirror": "npm:keymirror@^0.1.1",
-      "lodash": "npm:lodash@^3.10.0",
-      "qs": "npm:qs@^4.0.0",
-      "react": "npm:react@^0.13.3",
-      "react-bootstrap": "npm:react-bootstrap@^0.23.7",
-      "react-redux": "npm:react-redux@^1.0.0-alpha",
-      "react-router": "npm:react-router@1.0.0-beta2",
-      "redux": "npm:redux@1.0.0-rc",
-      "superagent": "npm:superagent@^1.2.0",
-      "url": "github:jspm/nodelibs-url@^0.1.0"
-    },
-    "devDependencies": {
-      "babel-runtime": "npm:babel-runtime@^5.6.4",
-      "core-js": "npm:core-js@^0.9.17"
-    }
-  },
   "devDependencies": {
-    "browser-sync": "^2.7.13",
+    "babel-core": "^5.8.20",
+    "babel-loader": "^5.3.2",
+    "core-js": "^1.0.1",
     "es6-shim": "^0.32.2",
     "express": "^4.13.0",
+    "immutable": "^3.7.4",
+    "keymirror": "^0.1.1",
+    "lodash": "^3.10.0",
     "peerflix": "^0.30.0",
-    "socket.io": "^1.3.5",
+    "qs": "^4.0.0",
+    "raw-loader": "^0.5.1",
+    "react-bootstrap": "^0.24.3",
+    "react-hot-loader": "^1.2.8",
+    "react-router": "^1.0.0-beta2",
+    "redux": "^1.0.0-rc",
+    "style-loader": "^0.12.3",
     "superagent": "^1.2.0",
-    "systemjs-builder": "^0.12.1"
+    "url": "^0.10.3",
+    "webpack": "^1.10.5",
+    "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
-    "react": "^0.13.3"
+    "babel-runtime": "^5.8.20",
+    "bluebird": "^2.9.34",
+    "react": "^0.13.3",
+    "react-redux": "^0.2.2"
   }
 }
