--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-runtime": "^5.8.20",
     "bluebird": "^2.9.34",
     "react": "^0.13.3",
-    "react-redux": "^0.2.2"
+    "react-redux": "^0.2.2",
+    "react-spinkit": "^1.1.2"
   }
 }
